Add auth methods